#
bin_PROGRAMS = cleanest
cleanest_SOURCES =  \
avoid_warnings.f \
button.inc \
dimensions.inc \
buttmis.f \
button.f \
buttqbr.f \
buttqcf.f \
buttqch.f \
buttqex.f \
buttqit.f \
buttqpr.f \
buttqxb.f \
buttqyb.f \
buttqytext.f \
buttsbr.f \
buttscf.f \
buttsch.f \
buttsex.f \
buttsit.f \
buttspr.f \
buttsxb.f \
buttsyb.f \
buttsytext.f \
chlower.f \
cleanest.f \
combpf.f \
endprogram.f \
factorialpf.f \
findmm.f \
fmean0.f \
fmedian1.f \
ifbutton.f \
leeonefile.f \
lrunx.f \
ludcmp.f \
lusolv.f \
ordena1f.f \
ordena1f2i.f \
palette.f \
polfit.f \
read2i.f \
readc.f \
readf.f \
readi.f \
readilim.f \
rmblank.f \
rpgband.f \
rpgbegin.f \
rpgbegok.f \
rpgenv.f \
rpgerasb.f \
rpgeras.f \
rpgerasw.f \
sleefits.f \
systemfunction.f \
truebeg.f \
truelen.f \
writefits.f \
zscale.f

cleanest_LDADD = $(CFITSIO_LIBS) $(PGPLOT_LDFLAGS)
